--- a/package.json
+++ b/package.json
@@ -8,17 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.11",
+    "@vue/apollo-option": "^4.0.0-alpha.14",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "eslint-plugin-graphql": "^4.0.0",
+    "vue": "^3.0.0",
+    "vue-loader": "^16.5.0",
+    "vue-router": "^4.0.0-0",
+    "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.13",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.11",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "vue-cli-plugin-apollo": "~0.22.2"
   },
   "eslintConfig": {
     "root": true,
