--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@apollo/client": "^3.4.11",
     "@vue/apollo-option": "^4.0.0-alpha.14",
+    "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "eslint-plugin-graphql": "^4.0.0",
+    "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-loader": "^16.5.0",
     "vue-router": "^4.0.0-0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
